--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
   "name": "parcel-react-ts-example",
   "description": "Parcel TypeScript simple example",
-  "version": "v0.0.1",
+  "version": "v0.0.2",
   "license": "MIT",
-  "main": "src/index.html",
   "scripts": {
     "start": "parcel src/index.html --open",
     "build": "parcel build src/index.html",
     "type-check": "tsc --noEmit",
-    "type-check:watch": "tsc --noEmit --watch"
+    "type-check:watch": "tsc --noEmit --watch",
+    "serve": "serve ./dist",
+    "deploy": "vercel"
   },
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/react": "^16.4.18",
-    "@types/react-dom": "^16.0.9",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.2",
-    "parcel-bundler": "^1.10.3",
-    "postcss": "^8.1.0",
-    "typescript": "^3.1.4"
+    "parcel": "latest",
+    "postcss": "^8.4.6",
+    "serve": "^13.0.2",
+    "typescript": "^4.5.5",
+    "vercel": "^24.0.0"
   }
 }
