--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
   "name": "parcel-react-ts-example",
-  "description": "Parcel TypeScript simple example",
-  "version": "v0.0.2",
+  "description": "Parcel + TypeScript + TailwindCSS + DaisyUI",
+  "version": "v0.0.3",
   "license": "MIT",
   "scripts": {
-    "start": "parcel src/index.html --open",
+    "dev": "parcel serve src/index.html --open",
+    "start": "parcel serve src/index.html --no-cache",
     "build": "parcel build src/index.html",
-    "type-check": "tsc --noEmit",
-    "type-check:watch": "tsc --noEmit --watch",
-    "serve": "serve ./dist",
-    "deploy": "cd dist &&vercel"
-  },
-  "browserslist": "> 0.5%, last 2 versions, not dead",
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "clean": "rm -rf .parcel-cache dist"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/preset-typescript": "^7.16.7",
-    "@types/react": "^17.0.39",
+    "@parcel/transformer-typescript-tsc": "^2.3.2",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.2",
+    "daisyui": "^2.1.0",
     "parcel": "latest",
-    "postcss": "^8.4.6",
-    "serve": "^13.0.2",
-    "typescript": "^4.5.5",
-    "vercel": "^24.0.0"
+    "postcss": "^8.4.5",
+    "postcss-nested": "^5.0.6",
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "postcss-import": "^14.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "tailwindcss": "^3.0.18"
   }
 }
