--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "v0.0.3",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel serve src/index.html --open",
+    "dev": "parcel serve src/index.html --open --port 3000 --hot",
     "start": "parcel serve src/index.html --no-cache",
     "build": "parcel build src/index.html",
     "clean": "rm -rf .parcel-cache dist"
@@ -21,9 +21,12 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@tail-kit/tail-kit": "^0.1.21",
     "postcss-import": "^14.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
+    "react-icons": "^4.3.1",
     "tailwindcss": "^3.0.18"
   }
 }
